@@ -14,31 +14,34 @@
 package io.trino.plugin.deltalake.transactionlog.checkpoint;
 
 import com.google.common.collect.ImmutableSet;
+import com.google.inject.Inject;
 import io.airlift.json.JsonCodec;
+import io.trino.filesystem.Location;
 import io.trino.filesystem.TrinoFileSystem;
 import io.trino.filesystem.TrinoFileSystemFactory;
 import io.trino.filesystem.TrinoOutputFile;
-import io.trino.hdfs.HdfsEnvironment;
+import io.trino.plugin.base.metrics.FileFormatDataSourceStats;
 import io.trino.plugin.deltalake.transactionlog.DeltaLakeTransactionLogEntry;
 import io.trino.plugin.deltalake.transactionlog.TableSnapshot;
+import io.trino.plugin.deltalake.transactionlog.TableSnapshot.MetadataAndProtocolEntry;
 import io.trino.plugin.deltalake.transactionlog.TransactionLogAccess;
-import io.trino.plugin.hive.FileFormatDataSourceStats;
+import io.trino.plugin.hive.NodeVersion;
+import io.trino.spi.TrinoException;
 import io.trino.spi.connector.ConnectorSession;
 import io.trino.spi.connector.SchemaTableName;
+import io.trino.spi.predicate.TupleDomain;
 import io.trino.spi.type.TypeManager;
-import org.apache.hadoop.fs.Path;
-
-import javax.inject.Inject;
 
 import java.io.IOException;
-import java.io.OutputStream;
 import java.io.UncheckedIOException;
+import java.util.List;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static com.google.common.base.Preconditions.checkArgument;
-import static com.google.common.base.Preconditions.checkState;
-import static com.google.common.collect.MoreCollectors.toOptional;
-import static io.trino.memory.context.AggregatedMemoryContext.newSimpleAggregatedMemoryContext;
+import static com.google.common.base.Predicates.alwaysTrue;
+import static com.google.common.collect.ImmutableList.toImmutableList;
+import static io.trino.plugin.deltalake.DeltaLakeErrorCode.DELTA_LAKE_INVALID_SCHEMA;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogParser.LAST_CHECKPOINT_FILENAME;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogUtil.getTransactionLogDir;
 import static io.trino.plugin.deltalake.transactionlog.checkpoint.CheckpointEntryIterator.EntryType.ADD;
@@ -54,7 +57,7 @@ public class CheckpointWriterManager
     private final TypeManager typeManager;
     private final CheckpointSchemaManager checkpointSchemaManager;
     private final TrinoFileSystemFactory fileSystemFactory;
-    private final HdfsEnvironment hdfsEnvironment;
+    private final String trinoVersion;
     private final TransactionLogAccess transactionLogAccess;
     private final FileFormatDataSourceStats fileFormatDataSourceStats;
     private final JsonCodec<LastCheckpoint> lastCheckpointCodec;
@@ -64,7 +67,7 @@ public class CheckpointWriterManager
             TypeManager typeManager,
             CheckpointSchemaManager checkpointSchemaManager,
             TrinoFileSystemFactory fileSystemFactory,
-            HdfsEnvironment hdfsEnvironment,
+            NodeVersion nodeVersion,
             TransactionLogAccess transactionLogAccess,
             FileFormatDataSourceStats fileFormatDataSourceStats,
             JsonCodec<LastCheckpoint> lastCheckpointCodec)
@@ -72,7 +75,7 @@ public class CheckpointWriterManager
         this.typeManager = requireNonNull(typeManager, "typeManager is null");
         this.checkpointSchemaManager = requireNonNull(checkpointSchemaManager, "checkpointSchemaManager is null");
         this.fileSystemFactory = requireNonNull(fileSystemFactory, "fileSystemFactory is null");
-        this.hdfsEnvironment = requireNonNull(hdfsEnvironment, "hdfsEnvironment is null");
+        this.trinoVersion = nodeVersion.toString();
         this.transactionLogAccess = requireNonNull(transactionLogAccess, "transactionLogAccess is null");
         this.fileFormatDataSourceStats = requireNonNull(fileFormatDataSourceStats, "fileFormatDataSourceStats is null");
         this.lastCheckpointCodec = requireNonNull(lastCheckpointCodec, "lastCheckpointCodec is null");
@@ -94,53 +97,71 @@ public class CheckpointWriterManager
             CheckpointBuilder checkpointBuilder = new CheckpointBuilder();
 
             TrinoFileSystem fileSystem = fileSystemFactory.create(session);
-            Optional<DeltaLakeTransactionLogEntry> checkpointMetadataLogEntry = snapshot
-                    .getCheckpointTransactionLogEntries(
-                            session,
-                            ImmutableSet.of(METADATA),
-                            checkpointSchemaManager,
-                            typeManager,
-                            fileSystem,
-                            fileFormatDataSourceStats)
-                    .collect(toOptional());
-            if (checkpointMetadataLogEntry.isPresent()) {
+            List<DeltaLakeTransactionLogEntry> checkpointLogEntries;
+            try (Stream<DeltaLakeTransactionLogEntry> checkpointLogEntriesStream = snapshot.getCheckpointTransactionLogEntries(
+                    session,
+                    ImmutableSet.of(METADATA, PROTOCOL),
+                    checkpointSchemaManager,
+                    typeManager,
+                    fileSystem,
+                    fileFormatDataSourceStats,
+                    Optional.empty(),
+                    TupleDomain.all(),
+                    Optional.empty())) {
+                checkpointLogEntries = checkpointLogEntriesStream.filter(entry -> entry.getMetaData() != null || entry.getProtocol() != null)
+                        .collect(toImmutableList());
+            }
+
+            if (!checkpointLogEntries.isEmpty()) {
                 // TODO HACK: this call is required only to ensure that cachedMetadataEntry is set in snapshot (https://github.com/trinodb/trino/issues/12032),
                 // so we can read add entries below this should be reworked so we pass metadata entry explicitly to getCheckpointTransactionLogEntries,
                 // and we should get rid of `setCachedMetadata` in TableSnapshot to make it immutable.
                 // Also more proper would be to use metadata entry obtained above in snapshot.getCheckpointTransactionLogEntries to read other checkpoint entries, but using newer one should not do harm.
-                checkState(transactionLogAccess.getMetadataEntry(snapshot, session).isPresent(), "metadata entry in snapshot null");
+                transactionLogAccess.getMetadataEntry(session, snapshot);
 
                 // register metadata entry in writer
-                checkState(checkpointMetadataLogEntry.get().getMetaData() != null, "metaData not present in log entry");
-                checkpointBuilder.addLogEntry(checkpointMetadataLogEntry.get());
+                DeltaLakeTransactionLogEntry metadataLogEntry = checkpointLogEntries.stream()
+                        .filter(logEntry -> logEntry.getMetaData() != null)
+                        .findFirst()
+                        .orElseThrow(() -> new TrinoException(DELTA_LAKE_INVALID_SCHEMA, "Metadata not found in transaction log for " + snapshot.getTable()));
+                DeltaLakeTransactionLogEntry protocolLogEntry = checkpointLogEntries.stream()
+                        .filter(logEntry -> logEntry.getProtocol() != null)
+                        .findFirst()
+                        .orElseThrow(() -> new TrinoException(DELTA_LAKE_INVALID_SCHEMA, "Protocol not found in transaction log for " + snapshot.getTable()));
+
+                checkpointBuilder.addLogEntry(metadataLogEntry);
+                checkpointBuilder.addLogEntry(protocolLogEntry);
 
                 // read remaining entries from checkpoint register them in writer
-                snapshot.getCheckpointTransactionLogEntries(
-                                session,
-                                ImmutableSet.of(PROTOCOL, TRANSACTION, ADD, REMOVE, COMMIT),
-                                checkpointSchemaManager,
-                                typeManager,
-                                fileSystem,
-                                fileFormatDataSourceStats)
-                        .forEach(checkpointBuilder::addLogEntry);
+                try (Stream<DeltaLakeTransactionLogEntry> checkpointLogEntriesStream = snapshot.getCheckpointTransactionLogEntries(
+                        session,
+                        ImmutableSet.of(TRANSACTION, ADD, REMOVE, COMMIT),
+                        checkpointSchemaManager,
+                        typeManager,
+                        fileSystem,
+                        fileFormatDataSourceStats,
+                        Optional.of(new MetadataAndProtocolEntry(metadataLogEntry.getMetaData(), protocolLogEntry.getProtocol())),
+                        TupleDomain.all(),
+                        Optional.of(alwaysTrue()))) {
+                    checkpointLogEntriesStream.forEach(checkpointBuilder::addLogEntry);
+                }
             }
 
-            snapshot.getJsonTransactionLogEntries()
+            snapshot.getJsonTransactionLogEntries(fileSystem)
                     .forEach(checkpointBuilder::addLogEntry);
 
-            Path transactionLogDirectory = getTransactionLogDir(snapshot.getTableLocation());
-            Path targetFile = new Path(transactionLogDirectory, String.format("%020d.checkpoint.parquet", newCheckpointVersion));
-            CheckpointWriter checkpointWriter = new CheckpointWriter(typeManager, checkpointSchemaManager, hdfsEnvironment);
+            Location transactionLogDir = Location.of(getTransactionLogDir(snapshot.getTableLocation()));
+            Location targetFile = transactionLogDir.appendPath("%020d.checkpoint.parquet".formatted(newCheckpointVersion));
+            CheckpointWriter checkpointWriter = new CheckpointWriter(typeManager, checkpointSchemaManager, trinoVersion);
             CheckpointEntries checkpointEntries = checkpointBuilder.build();
-            checkpointWriter.write(session, checkpointEntries, targetFile);
+            TrinoOutputFile checkpointFile = fileSystemFactory.create(session).newOutputFile(targetFile);
+            checkpointWriter.write(checkpointEntries, checkpointFile);
 
             // update last checkpoint file
-            LastCheckpoint newLastCheckpoint = new LastCheckpoint(newCheckpointVersion, checkpointEntries.size(), Optional.empty());
-            Path checkpointPath = new Path(transactionLogDirectory, LAST_CHECKPOINT_FILENAME);
-            TrinoOutputFile outputFile = fileSystem.newOutputFile(checkpointPath.toString());
-            try (OutputStream outputStream = outputFile.createOrOverwrite(newSimpleAggregatedMemoryContext())) {
-                outputStream.write(lastCheckpointCodec.toJsonBytes(newLastCheckpoint));
-            }
+            LastCheckpoint newLastCheckpoint = new LastCheckpoint(newCheckpointVersion, checkpointEntries.size(), Optional.empty(), Optional.empty());
+            Location checkpointPath = transactionLogDir.appendPath(LAST_CHECKPOINT_FILENAME);
+            TrinoOutputFile outputFile = fileSystem.newOutputFile(checkpointPath);
+            outputFile.createOrOverwrite(lastCheckpointCodec.toJsonBytes(newLastCheckpoint));
         }
         catch (IOException e) {
             throw new UncheckedIOException(e);
